@@ -1,6 +1,4 @@
 #!/usr/bin/env bash
-# default_db.xml must have a bean 'DataSource' configuring connection to RGD database
-#   and 'CarpeDataSource' configuring connection to Rat CarpeNovo database
 #
 . /etc/profile
 
@@ -19,9 +17,6 @@ MAPKEY=0
 # unless user specifies in cmdline for which map_key to run
 if [[ "$1" ]]; then
   MAPKEY=$1
-  #echo " running for MAP_KEY=$MAPKEY"
-else
-  #echo " running for all map keys"
 fi
 
 ./_run.sh --mapKey=$MAPKEY
