@@ -1,3 +1,6 @@
+Jan 28, 2020
+  fixed import.sh script
+
 Sep 18, 2019
   improved logging: use log4j instead of System.out.println
 
